--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <!-- Google Fonts for Cute Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500&display=swap" rel="stylesheet">
+  <meta name="google-site-verification" content="broWwaMHalMwMCsA9KR-prcekeQSmEhpjnISnKqxAeA" />
   <style>
     body {
       font-family: 'Baloo 2', sans-serif; /* 귀여운 글꼴로 변경 */
